[project]
name = "test-bsr-metadata"
version = "0.1.0"
description = "Reproduces BSR + uv exclude-newer incompatibility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio",                       # from PyPI — works fine, has upload-time
    "beta-googleapis-grpc-python",  # from BSR — fails, no upload-time available
]

[tool.uv]
exclude-newer = "30d"

[[tool.uv.index]]
url = "https://buf.build/gen/python"
name = "buf-bsr"
